--- a/math.html
+++ b/math.html
@@ -200,29 +200,29 @@
             overflow-y: auto; /* Allow vertical scrolling if needed */
             max-height: 400px; /* Limit height to prevent excessive scrolling */
             display: grid; /* Use grid for controlled layout */
-            /* Default gap, adjusted by specific group classes */
-            gap: 0.5rem;
+            /* gap is defined by the specific column classes below */
             justify-items: center; /* Center items within their grid cells */
             align-items: center;
+            /* Default or fallback grid template */
+             grid-template-columns: repeat(auto-fit, minmax(20px, 1fr)); /* Fallback */
+             gap: 0.5rem; /* Default gap */
         }
 
-        /* NEW: Specific grid styles for grouping */
-        .icon-display-area.icons-group-5 {
-            /* Force 5 columns */
-            grid-template-columns: repeat(5, minmax(0, 1fr)); /* Use minmax(0, 1fr) for flexible but equal width columns */
-            gap: 0.5rem; /* Gap suitable for 5 columns */
+        /* --- NEW GRID LAYOUT CLASSES BASED ON USER REQUIREMENT --- */
+        .icons-grid-5-per-row {
+            grid-template-columns: repeat(5, 1fr); /* Force 5 columns */
+            gap: 0.8rem; /* Gap for 5 columns */
         }
 
-        .icon-display-area.icons-group-10 {
-            /* Force 10 columns */
-            grid-template-columns: repeat(10, minmax(0, 1fr)); /* Force 10 columns */
-            gap: 0.2rem; /* Smaller gap for more icons */
+        .icons-grid-10-per-row {
+            grid-template-columns: repeat(10, 1fr); /* Force 10 columns */
+             gap: 0.4rem; /* Gap for 10 columns (smaller gap for more icons) */
         }
+         /* END NEW GRID LAYOUT CLASSES */
 
-        /* Math icon styling */
+
+        /* Define icon sizes */
         .math-icon { object-fit: contain; flex-shrink: 0;}
-
-        /* Define icon sizes - these will interact with the grid columns */
         .math-icon.small { width: 20px; height: 20px; }
         .math-icon.medium { width: 30px; height: 30px; }
         .math-icon.large { width: 40px; height: 40px; }
@@ -254,6 +254,10 @@
         @media (min-width: 1024px) { /* lg */
             .grid-container {
                 grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+            }
+             /* Adjust modal max-width for larger screens if needed */
+            .modal-content {
+                 max-width: 800px;
             }
         }
 
@@ -485,7 +489,7 @@
                                 this.numberSoundElements[i] = soundElement;
                                 soundElement.onerror = (e) => console.error(`Error loading audio for number ${i}:`, soundElement.src, e);
                             } else {
-                                // Provide a dummy object if element is not found to prevent errors
+                                // Create a dummy object if element not found to prevent errors
                                 this.numberSoundElements[i] = { play: () => { console.warn(`Audio tag not found for number ${i}. Expected ID: sound-${i}.`); }, pause: () => {}, currentTime: 0 };
                             }
                         }
@@ -516,7 +520,8 @@
                 stopAllSounds() {
                     // Stop all currently playing number sounds
                     Object.values(this.numberSoundElements).forEach(audio => {
-                        if (audio && typeof audio.pause === 'function' && !audio.paused) {
+                         // Check if audio exists and has pause/currentTime properties (handles dummy objects)
+                        if (audio && typeof audio.pause === 'function' && typeof audio.currentTime !== 'undefined' && !audio.paused) {
                             audio.pause();
                             audio.currentTime = 0;
                         }
@@ -529,55 +534,35 @@
                 playNumberSound(number) {
                     console.log("Attempting to play sound for number:", number); // Debugging log
                     const soundElement = this.numberSoundElements[number];
-                    if (soundElement && typeof soundElement.play === 'function' && soundElement.src) { // Check if src is also set
+                     // Check if soundElement is a valid audio element object
+                    if (soundElement && soundElement instanceof HTMLAudioElement) {
                         this.stopAllSounds(); // Stop any other number sound or TTS
                         soundElement.currentTime = 0; // Reset to start
-                        // Play only if the audio element loaded successfully
-                        if (soundElement.readyState >= 2) { // Check if data is available (HAVE_CURRENT_DATA)
-                            soundElement.play().catch(error => console.error(`Error playing sound for number ${number}:`, error));
-                        } else {
-                            console.warn(`Audio for number ${number} is not ready to play. State: ${soundElement.readyState}`);
-                             this.fallbackToTTS(number); // Use TTS if audio not ready
+                        soundElement.play().catch(error => console.error(`Error playing sound for number ${number}:`, error));
+                    } else {
+                        console.warn(`Sound element not found or is not an audio element for number ${number}. Check audio tags and paths.`);
+                        // Fallback: Text-to-Speech for numbers if audio is missing (optional)
+                        if (window.speechSynthesis && this.synth) {
+                            this.synth.cancel(); // Stop any other TTS
+                            const utterance = new SpeechSynthesisUtterance(number.toString()); // Speak the actual number string (e.g., "25")
+                            // Attempt to find a suitable voice, prioritizing English or Kurdish (if available)
+                            const voices = this.synth.getVoices();
+                            let voice = voices.find(v => v.lang === 'ckb-IQ' || v.lang === 'ckb-IR'); // Check for Kurdish voice
+                            if (!voice) {
+                                voice = voices.find(v => v.lang.startsWith('en') && (v.name.toLowerCase().includes('child') || v.name.toLowerCase().includes('male'))); // Fallback to English child/male voice
+                            }
+                             if (!voice) {
+                                voice = voices.find(v => v.lang.startsWith('en')); // Any English voice
+                            }
+                            if (voice) utterance.voice = voice;
+                             utterance.lang = voice ? voice.lang : 'en-US'; // Set language based on chosen voice or default to en-US
+                            this.synth.speak(utterance);
+                            utterance.onerror = (event) => {
+                                console.error('TTS fallback error for number:', number, event);
+                            };
                         }
-                    } else {
-                        console.warn(`Sound element not found, play function missing, or src is empty for number ${number}. Check audio tags and paths.`);
-                        this.fallbackToTTS(number); // Use TTS if audio element is missing or invalid
                     }
                 },
-
-                fallbackToTTS(number) {
-                     // Fallback: Text-to-Speech for numbers if audio is missing or failed
-                    if (window.speechSynthesis && this.synth) {
-                        this.synth.cancel(); // Stop any other TTS
-                        const utterance = new SpeechSynthesisUtterance(number.toString()); // Speak the actual number string (e.g., "25")
-                        // Using English TTS for numbers is often better for standard digit pronunciation
-                        // If you have a Kurdish TTS voice installed that pronounces numbers correctly, use that.
-                        // Find a suitable voice - maybe English or a generic voice.
-                         const voices = this.synth.getVoices();
-                         let voice = voices.find(v => v.lang.startsWith('en-') && (v.name.toLowerCase().includes('child') || v.name.toLowerCase().includes('male')));
-                         if (!voice) { // Fallback to any English voice if specific ones not found
-                             voice = voices.find(v => v.lang.startsWith('en-'));
-                         }
-                         if (!voice) { // Fallback to any available voice if no English found
-                             voice = voices[0]; // Use the first available voice
-                         }
-                         if (voice) {
-                             utterance.voice = voice;
-                             utterance.lang = voice.lang; // Use the language of the selected voice
-                         } else {
-                              utterance.lang = 'en-US'; // Default to English if no voice found
-                         }
-
-                        console.log(`Falling back to TTS for number ${number} using voice: ${voice ? voice.name : 'default'}`);
-                        this.synth.speak(utterance);
-                        utterance.onerror = (event) => {
-                            console.error('TTS fallback error for number:', number, event);
-                        };
-                    } else {
-                        console.warn("TTS not available in this browser.");
-                    }
-                },
-
 
                 // --- Numbers with Icons Section Functions ---
                 generateAnimalIcons(count) {
@@ -610,7 +595,7 @@
                     // Play the number sound when the modal opens
                     this.playNumberSound(number);
                     this.modalOpen = true;
-                    // Scroll modal content to top
+                    // Scroll modal content to top on next tick after DOM updates
                     this.$nextTick(() => {
                         const modalContent = document.querySelector('.modal-content');
                         if (modalContent) {
@@ -629,28 +614,24 @@
                 },
 
                 // Computed property/function to dynamically calculate icon size class based on number
-                // Adjust icon size to fit 5 or 10 columns reasonably
                 iconSizeClass() {
-                    const num = this.selectedNumberForIcons;
-                    if (num === 0) return ''; // No icons
-                    if (num > 0 && num <= 30) { // For 5-column layout
-                        if (num <= 5) return 'xlarge'; // Very large for 1 row or less
-                        if (num <= 15) return 'large'; // Large for a few rows
-                        if (num <= 30) return 'medium'; // Medium for more rows in 5-col
-                    } else if (num > 30) { // For 10-column layout
-                        // Icons need to be smaller to fit 10 per row comfortably
-                        if (num <= 60) return 'small'; // Small for up to 6 rows
-                        if (num <= 100) return 'small'; // Small for larger numbers
-                    }
-                    return 'small'; // Default/fallback
+                    if (this.selectedNumberForIcons === 0) return ''; // No icons
+
+                    // Adjust size thresholds based on the expected grid layout (5 or 10 columns)
+                    if (this.selectedNumberForIcons <= 5) return 'xlarge'; // Very few, very large (fits 5-col)
+                    if (this.selectedNumberForIcons <= 10) return 'large'; // Still few, large (fits 5-col)
+                    if (this.selectedNumberForIcons <= 40) return 'medium'; // Up to 40 (fits well in 5 columns with medium size)
+                    // For numbers > 40 (which use 10 columns), use small size to fit more icons
+                    return 'small';
                 },
-                // Computed class for the icon container grid layout based on grouping rule
+
+                // Computed class for the icon container grid layout (5 or 10 columns)
                 iconGridClass() {
-                    const num = this.selectedNumberForIcons;
-                    if (num === 0) return '';
-                    if (num > 0 && num <= 30) return 'icons-group-5'; // Apply 5-column grid
-                    if (num > 30) return 'icons-group-10'; // Apply 10-column grid
-                    return ''; // Should not happen for numbers 1-100
+                    if (this.selectedNumberForIcons === 0) return ''; // No grid needed for 0
+                    // Apply 5-column grid for numbers 1 through 40
+                    if (this.selectedNumberForIcons <= 40) return 'icons-grid-5-per-row';
+                    // Apply 10-column grid for numbers 41 through 100
+                    return 'icons-grid-10-per-row';
                 }
             }
         }
